kubernetes/apps/default/mail-archive/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: mail-archive-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/controller: imapsync
    egress:
      - toFQDNs:
          - matchName: imap.migadu.com
        toPorts:
          - ports:
              - port: "993"
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: mail-archive
        toPorts:
          - ports:
              - port: "143"
